auto-test/tests/chapter_14/invalid_types/extra_credit/compound_assign_thru_ptr_not_lval.c


int main(void) {
    int i = 100;
    int *ptr = &i;
    int *ptr2 = &(*ptr -= 10);
    return 0;
}